src/objects/Retailed_Vehicles__c.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>CASE( Sales_Type__c , 
&quot;E&quot;, &quot;LARGE&quot;, 
&quot;I&quot;, &quot;LARGE&quot;,
&quot;K&quot;, &quot;LARGE&quot;,
&quot;M&quot;, &quot;LARGE&quot;,
&quot;N&quot;, &quot;LARGE&quot;,
&quot;P&quot;, &quot;LARGE&quot;,
&quot;Q&quot;, &quot;LARGE&quot;,
&quot;U&quot;, &quot;LARGE&quot;,
&quot;W&quot;, &quot;LARGE&quot;,
&quot;X&quot;, &quot;LARGE&quot;,
&quot;H&quot;, &quot;Rental&quot;,
&quot;C&quot;, &quot;Government&quot;,
&quot;L&quot;, &quot;Government&quot;,
&quot;S&quot;, &quot;Government&quot;,
&quot;Y&quot;, &quot;Not for Profit&quot;,
&quot;1&quot;, &quot;Direct Rental&quot;, 
&quot;2&quot;, &quot;Direct Government&quot;,
&quot;4&quot;, &quot;Direct Large&quot;,
&quot;T&quot;, &quot;Direct Large&quot;, 
&quot;Sales Type Error&quot;)</formula>
        <inlineHelpText>Channel derived from Sales Type.</inlineHelpText>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Retailed Vehicles</relationshipLabel>
        <relationshipName>Retailed_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Retailed Vehicles</relationshipLabel>
        <relationshipName>Retailed_Vehicles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_3_Vehicle_Variant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 3 Vehicle Variant</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Retailed Vehicles (Level 3 Vehicle Variant)</relationshipLabel>
        <relationshipName>Retailed_Vehicles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model_Series__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model Series</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Retailed Vehicles (Model Series)</relationshipLabel>
        <relationshipName>Retailed_Vehicles2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Write__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Write</label>
        <referenceTo>Order_Writes__c</referenceTo>
        <relationshipLabel>Retailed Vehicles</relationshipLabel>
        <relationshipName>Retailed_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Retailed Vehicles</relationshipLabel>
        <relationshipName>Retailed_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Can be -1 for reversals</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Text(Dealer__r.Region__c )</formula>
        <inlineHelpText>Dealer&apos;s region</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailed_Date__c</fullName>
        <label>Retailed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retailed_Vehicle_Id__c</fullName>
        <externalId>true</externalId>
        <label>Retailed Vehicle Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUO_Number__c</fullName>
        <label>SUO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Assistance_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Special Assistance Number</label>
        <referenceTo>Special_Assistance__c</referenceTo>
        <relationshipLabel>Retailed Vehicles</relationshipLabel>
        <relationshipName>Retailed_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_Organisation_RecordtypeName__c</fullName>
        <formula>Organisation__r.RecordType.DeveloperName</formula>
        <label>TECH_Organisation_RecordtypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Retail or Reversal</description>
        <inlineHelpText>Retail or Reversal</inlineHelpText>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN_Number__c</fullName>
        <label>VIN Number</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Retailed Vehicles</relationshipLabel>
        <relationshipName>Retailed_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Retailed Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Retailed_Vehicle_Id__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Dealer__c</columns>
        <columns>Organisation__c</columns>
        <columns>Quantity__c</columns>
        <columns>Retailed_Date__c</columns>
        <columns>Sales_Type__c</columns>
        <columns>Special_Assistance_Number__c</columns>
        <columns>Order_Write__c</columns>
        <columns>Type__c</columns>
        <columns>VIN_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>channel</fullName>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Dealer__c</columns>
        <columns>Organisation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailed_Date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>channel</label>
    </listViews>
    <nameField>
        <displayFormat>RV-{0000}</displayFormat>
        <label>Retailed Vehicle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retailed Vehicles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>